Search API 1.x, dev (xxxx-xx-xx):
---------------------------------
- #2819637 by alan-ps: Renamed use of the DB layer rollback() method to
  rollBack().

Search API 1.0, Beta 3 (2016-10-24):
------------------------------------
- #2625152 by jhedstrom, drunken monkey, borisson_, mpp, stijn.blomme,
  Rodlangh: Added an "Index hierarchy" processor.
- #2818621 by alan-ps: Fixed overly accurate index status percentage.
- #2792277 by drunken monkey: Fixed issues during config syncing of our
  entities.
- #2813525 by drunken monkey, alan-ps: Fixed incorrect indexing of
  nodes/comments with excluded bundle.
- #2803701 by drunken monkey, rbayliss: Fixed strict warnings from
  UnsavedConfigurationFormTrait.
- #2711017 by drunken monkey: Adapted Core's UncacheableDependencyTrait.
- #2690229 by drunken monkey: Adapted Core's SubformState solution.
- #2575641 by rbayliss, dazz, drunken monkey: Fixed behavior of "Save and edit"
  button for indexes.
- #2769021 by drunken monkey: Added the generated Search API query to the Views
  preview.
- #2817341 by mkalkbrenner, drunken monkey: Added PluginDependencyTrait to
  ConfigurablePluginBase.
- #2809211 by cristiroma: Fixed size of text fields on "Fields" tab.
- #2684465 by Dropa, david.gil, drunken monkey: Fixed indexing of
  non-translated entity references.
- #2695627 by dermario, drunken monkey: Added support for (NOT) IN and (NOT)
  BETWEEN operators to Views.
- #2782577 by drunken monkey, zuhair_ak: Fixed extraction of configurable
  properties in processors.

Search API 1.0, Beta 2 (2016-09-28):
------------------------------------
- #2798643 by drunken monkey, Berdir: Fixed handling of enforced dependencies
  for search indexes.
- #2799475 by borisson_, drunken monkey: Added support for Views block and REST
  displays in the Views search display deriver.
- #2763161 by drunken monkey, borisson_: Fixed cache issues with Views search
  display plugins.